# mcdrefsrv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
codegen/: README.md  main.py  manualprimitives.py  modifiers.py  primitives.py  structs.py
include/: adapter.hpp  comm.hpp  mcd_rpc.h  mcd_types.h
src/: CMakeLists.txt  adapter.cpp  comm.cpp  comm_qmp.cpp  comm_rpc.cpp  core_passthrough.cpp  helpers.cpp  mcd_api.h  mcd_rpc.cpp  mcd_shared_defines.h  mcd_types.h  mcdlib.cpp  mcdlib.h  mcdstub.cpp  qmp.cpp
tests/: README.md  conftest.py  mcdlib_unittests.py  pyproject.toml  test_initialization.py  test_qemu_cortex_a15.py  test_qemu_cortex_a53.py  test_qemu_ivybridge.py  test_qemu_rv64.py  test_qemu_rv64_smp.py
tests/internals/: mcd_test_values.py  mcdlib_routines.py  mcdstub_data.py
tests/internals/mcdapi/: mcd_api.py  mcd_structs.py
tests/mcdapi/: mcd_api.py  pyproject.toml
trace32_launch_scripts/: launch_mcd.py
